[package]
name = "nutraining_api_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.11"
rocket_contrib = {version="0.4.11", features=["json"]}
rusqlite = {version= "0.27.0", features= ["bundled"]}
serde = {version="1.0.137", features=["derive"]}
serde_json = "1.0.82"
